// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should render prop placement="left" correctly 1`] = `
<div class="fx-drawer fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-drawer_inner fx-horizontal-hairline placement--left" style="padding: 0px 0px 0px 0px;">
    <!---->
    <div class="fx-drawer_body"></div>
  </div>
</div>
`;

exports[`Drawer should render prop showClose=true correctly 1`] = `
<div class="fx-drawer fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-drawer_inner fx-horizontal-hairline placement--bottom has--header" style="padding: 0px 0px 0px 0px;">
    <nav-bar-stub leftbuttons="" rightbuttons="[object Object]" class="fx-drawer_header"></nav-bar-stub>
    <div class="fx-drawer_body"></div>
  </div>
</div>
`;

exports[`Drawer should render prop title="Drawer" correctly 1`] = `
<div class="fx-drawer fx-popup" style="z-index: 2000; display: none;">
  <div class="fx-mask"></div>
  <div class="fx-drawer_inner fx-horizontal-hairline placement--bottom has--header" style="padding: 0px 0px 0px 0px;">
    <nav-bar-stub title="Drawer" leftbuttons="" rightbuttons="" class="fx-drawer_header"></nav-bar-stub>
    <div class="fx-drawer_body"></div>
  </div>
</div>
`;
